Improve build files

--- a/esp32/netmcu/CMakeLists.txt
+++ b/esp32/netmcu/CMakeLists.txt
@@ -1,61 +1,23 @@
-# The following lines of boilerplate have to be in your project's
-# CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.16)
+option(CMAKE_EXPORT_COMPILE_COMMANDS "generate compilation database for clang-tidy" ON)
 
-option(BUILD_HOST_TESTS "build host test" OFF)
-
-if (BUILD_HOST_TESTS)
-include(host_tests.cmake)
-
-doxy_create_input()
-else()
-
-set(PROJECT_NAME "tronferno-mcu")
-
-set(EXTRA_COMPONENT_DIRS ./components-mcu/components)
-
-set(COMPONENTS app_main
-	  bootloader esptool_py partition_table soc log spi_flash micro-ecc main efuse driver esp_rom  
-)
-
-#set environment variables to be used in components
-set(comp_compile_feats cxx_std_20)
-set(comp_compile_opts "$<$<COMPILE_LANGUAGE:CXX>:-Wno-narrowing>" -Wno-missing-field-initializers)
-#set(comp_compile_opts ${comp_compile_opts} "$<$<COMPILE_LANGUAGE:CXX>:-std=gnu++2a>")
-
-include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+option(BUILD_HOST_TESTS "build configs/host-test" ON)
+option(BUILD_ESP32_RELEASE "build configs/esp32-release" OFF)
+option(BUILD_ESP32_DEBUG "build configs/esp32-debug" OFF)
 
 
-add_compile_definitions(MCU_ESP32)
-if(DEFINED ENV{DISTRO})
-add_compile_definitions(DISTRIBUTION)
-endif()
-if(DEFINED ENV{FLAVOR_LAN})
-add_compile_definitions(FLAVOR_LAN)
-endif()
-if(DEFINED ENV{CELLAR})
-add_compile_definitions(CELLAR)
+
+if(BUILD_HOST_TESTS)
+project("rv-netmcu-tests")
+
+file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/config)
+file(COPY ${CMAKE_CURRENT_LIST_DIR}/configs/host-test/config/sdkconfig.h DESTINATION ${PROJECT_BINARY_DIR}/config)
+file(COPY ${CMAKE_CURRENT_LIST_DIR}/configs/host-test/config/sdkconfig.cmake DESTINATION ${PROJECT_BINARY_DIR}/config)
+file(COPY ${CMAKE_CURRENT_LIST_DIR}/configs/host-test/config/sdkconfig.json DESTINATION ${PROJECT_BINARY_DIR}/config)
+include("configs/host-test/CMakeLists.txt")
 endif()
 
-function(component_compile_features)
-    target_compile_features(${COMPONENT_LIB} PRIVATE ${ARGV})
-endfunction()
-
-project(netmcu esptool_py                
-)
-
-
-
-set_target_properties(__idf_stm32 PROPERTIES LINK_INTERFACE_MULTIPLICITY 3)
-
-
-set(comps app_main app_settings  utils_misc utils_debug txtio uout cli jsoneat 
- net_http_server net_mqtt_app app_uout app_misc app_net net app_cli protobuf nanopb stm32 config_kvs 
- kvs net_mqtt_client stm32_com http_server_content firmware_update storage utils_time)
-
-foreach(comp ${comps})
-  message("comp: ${comp}")
- #set_target_properties(__idf_${comp} PROPERTIES LINK_INTERFACE_MULTIPLICITY 10)
-endforeach()
-
+if(BUILD_ESP32_DEBUG)
+project("rv-netmcu")
+# run idf.py or make somehow
 endif()
