--- a/esp32/netmcu/configs/host-test/.config
+++ b/esp32/netmcu/configs/host-test/.config
@@ -7,6 +7,8 @@ CONFIG_STM32_UART_RX_PIN=36
 CONFIG_STM32_RESET_PIN=33
 CONFIG_STM32_BOOT_PIN=32
 # CONFIG_APP_USE_WEATHER_AUTO is not set
+CONFIG_APP_USE_HTTP_SERVE_JS_MAP=y
+# CONFIG_APP_USE_HTTP_SERVE_CSS_MAP is not set
 CONFIG_APP_USE_SERIAL=y
 CONFIG_APP_USE_WDG=y
 CONFIG_APP_USE_FS=y
@@ -19,25 +21,42 @@ CONFIG_APP_USE_WS=y
 CONFIG_APP_USE_CLI_MUTEX=y
 CONFIG_APP_USE_STM32COM=y
 CONFIG_APP_USE_AP_FALLBACK=y
-# CONFIG_APP_USE_NETWORK is not set
-CONFIG_APP_MQTT_CLIENT_ID="zb"
-CONFIG_APP_MQTT_ROOT_TOPIC="tfmcu"
+CONFIG_APP_USE_NETWORK=y
+CONFIG_APP_USE_LAN=y
+CONFIG_APP_USE_WLAN=y
+CONFIG_APP_USE_HTTP=y
+CONFIG_APP_USE_MQTT=y
+CONFIG_APP_MQTT_CLIENT_ID="Regner"
+CONFIG_APP_MQTT_ROOT_TOPIC="rv"
+CONFIG_APP_USE_OTA=y
 CONFIG_APP_USE_POSIX_TIME=y
 # CONFIG_APP_USE_MUTEX is not set
-# CONFIG_APP_USE_ESP_GET_TIME is not set
-# CONFIG_APP_USE_GPIO_PINS is not set
+CONFIG_APP_USE_ESP_GET_TIME=y
+CONFIG_APP_USE_GPIO_PINS=y
 CONFIG_APP_USE_FREERTOS=y
 CONFIG_APP_USE_LPH=y
 CONFIG_APP_GEO_TZ="CET-1CEST-2,M3.5.0,M10.5.0"
 CONFIG_APP_SETTINGS_PASSWORD=""
-CONFIG_APP_WIFI_AP_SSID="tronferno"
-CONFIG_APP_WIFI_AP_PASSWORD="tronferno"
-CONFIG_APP_CFG_NAMESPACE="Settings"
+CONFIG_APP_WIFI_AP_SSID="rv"
+CONFIG_APP_WIFI_AP_PASSWORD="12345678"
+CONFIG_APP_CFG_NAMESPACE="Tronferno"
 CONFIG_APP_GPIO_NUMBER_OF_GPIOS=40
 CONFIG_MAIN_LOOP_PERIOD_MS=100
 CONFIG_NETWORK_CHECK_LOOP_PERIOD_S=15
 CONFIG_APP_USE_PROTOBUF=y
 # end of RV Project Configuration
+
+#
+# zwiebert: rv_netmcu
+#
+# CONFIG_APP_PING_THE_GATEWAY is not set
+CONFIG_APP_FA_NAMES_MAX_LEN=32
+CONFIG_APP_NUMBER_OF_VALVES=14
+CONFIG_APP_FA_MAX_VALVE_GROUPS=16
+CONFIG_APP_FA_MAX_WEATHER_ADAPTERS=16
+CONFIG_RV_ENABLE_WATCHDOG=y
+# CONFIG_RV_NETMCU_DEBUG is not set
+# end of zwiebert: rv_netmcu
 
 #
 # zwiebert: CLI
@@ -80,7 +99,6 @@ CONFIG_WEATHER_OWM_URL_STRING="http://api.openweathermap.org/data/2.5/weather?q=
 # zwiebert: STM32
 #
 CONFIG_STM32_HAVE_COMPONENT=y
-CONFIG_STM32_USE_COMPONENT=y
 # CONFIG_STM32_DEBUG is not set
 CONFIG_STM32_ENABLE_RESET=y
 CONFIG_STM32_MAKE_COMPONENT_THREAD_SAFE=y
@@ -102,6 +120,11 @@ CONFIG_APP_HTTP_PASSWORD=""
 # zwiebert: Networking
 #
 CONFIG_NET_HAVE_COMPONENT=y
+CONFIG_APP_WIFI_SSID=""
+CONFIG_APP_WIFI_PASSWORD=""
+CONFIG_APP_USE_WLAN_AP=y
+CONFIG_APP_USE_NTP=y
+CONFIG_APP_NTP_SERVER="gateway"
 CONFIG_APP_TCPS_ENABLE=1
 CONFIG_APP_TCPS_PORT=7777
 CONFIG_APP_TCPS_PORT_IA=0
@@ -120,7 +143,7 @@ CONFIG_APP_MQTT_URL=""
 CONFIG_APP_MQTT_ENABLE=0
 CONFIG_APP_MQTT_USER=""
 CONFIG_APP_MQTT_PASSWORD=""
-# CONFIG_NET_MQTT_CLIENT_DEBUG is not set
+CONFIG_NET_MQTT_CLIENT_DEBUG=y
 # end of zwiebert: MQTT client
 
 #
