--- a/esp32/netmcu/configs/host-test/CMakeLists.txt
+++ b/esp32/netmcu/configs/host-test/CMakeLists.txt
@@ -6,14 +6,14 @@ option(ASAN "enable compiler sanitizer" OFF)
 option(GPROF "enable gprof" OFF)
 
 
-set(TARGET_PLATFORM_FILTER "host/.*")
+#set(TARGET_PLATFORM_FILTER "host/.*")
 
 project(mbed-all-tests)
 
-file(GLOB external_components ${CMAKE_SOURCE_DIR}/../../external/*/components ${CMAKE_SOURCE_DIR}/../../external/*/external/*/components)
-set(EXTRA_COMPONENT_DIRS ${CMAKE_SOURCE_DIR}/../../components ${external_components})
+file(GLOB external_components ${CMAKE_CURRENT_LIST_DIR}/../../external/*/components ${CMAKE_CURRENT_LIST_DIR}/../../external/*/external/*/components)
+set(EXTRA_COMPONENT_DIRS  ${CMAKE_CURRENT_LIST_DIR}/../../components ${external_components} )
 
-message("external_components: ${external_components}")
+message("EXTRA_COMPONENT_DIRS: ${EXTRA_COMPONENT_DIRS}")
 
 set(comp_compile_feats cxx_std_20)
 set(comp_compile_opts -O0 -ggdb  # -fanalyzer
@@ -29,5 +29,5 @@ if(ASAN)
   add_compile_options(-fsanitize=address -fstack-protector-all)
 endif()
 
-include(${CMAKE_SOURCE_DIR}/../../external/host-test-idf/components/test_host/host_test.cmake)
-add_subdirectory(${CMAKE_SOURCE_DIR}/../../components/rv_netmcu ${CMAKE_BINARY_DIR}/${BIN_COMP_ROOT}/rv_netmcu)
+include(${CMAKE_CURRENT_LIST_DIR}/../../external/host-test-idf/components/test_host/host_test.cmake)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../../components/rv_netmcu ${CMAKE_BINARY_DIR}/${BIN_COMP_ROOT}/rv_netmcu)
