--- a/esp32/netmcu/configs/host-test/CMakeLists.txt
+++ b/esp32/netmcu/configs/host-test/CMakeLists.txt
@@ -8,14 +8,17 @@ option(GPROF "enable gprof" OFF)
 
 #set(TARGET_PLATFORM_FILTER "host/.*")
 
-project(mbed-all-tests)
+project(rv-netmcu-tests)
 
-
+# delete this folder in build, or a second configure will break the build
+execute_process(COMMAND bash -c "rm -r ${PROJECT_BINARY_DIR}/comp")
+# create the actual build directory (target of soft-link build)
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/../../build/host-test)
+# copy the config from config subdirectory. TODO: build config here instead of root-makefile
 file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/config)
 file(COPY ${CMAKE_CURRENT_LIST_DIR}/config/sdkconfig.h DESTINATION ${PROJECT_BINARY_DIR}/config)
 file(COPY ${CMAKE_CURRENT_LIST_DIR}/config/sdkconfig.cmake DESTINATION ${PROJECT_BINARY_DIR}/config)
 file(COPY ${CMAKE_CURRENT_LIST_DIR}/config/sdkconfig.json DESTINATION ${PROJECT_BINARY_DIR}/config)
-
 
 file(GLOB external_components ${CMAKE_CURRENT_LIST_DIR}/../../external/*/components ${CMAKE_CURRENT_LIST_DIR}/../../external/*/external/*/components)
 set(EXTRA_COMPONENT_DIRS  ${CMAKE_CURRENT_LIST_DIR}/../../components ${external_components} )
