Improve build files

--- a/esp32/netmcu/configs/esp32-debug/CMakeLists.txt
+++ b/esp32/netmcu/configs/esp32-debug/CMakeLists.txt
@@ -36,6 +36,7 @@ endfunction()
 project(netmcu esptool_py)
 #set_target_properties(__idf_stm32 PROPERTIES LINK_INTERFACE_MULTIPLICITY 3)
 
-
-
-include(CTest)
+# copy the current compile_commands.json to a single location for vscode
+add_custom_command(TARGET netmcu.elf POST_BUILD
+                   COMMAND cp --verbose ${PROJECT_BINARY_DIR}/compile_commands.json ${CMAKE_CURRENT_LIST_DIR}/../../build/compile_commands.json
+)
